@@ -8,7 +8,7 @@ To Do:
             Add in description instead?
         Add it so need upgrade specialization for certain upgrades?
         look at Botania for tutorialIfFirstUse
-            Set of GuiSceens with informational tooltips/textboxes that you click through to see all the ways to use a backpack
+            Set of GuiScreens with informational tooltips/textboxes that you click through to see all the ways to use a backpack
             Expand this idea so when you make an (i.e. AdvancedFilter) for the first item, shows popup for the nifty things for it.
 
 
