@@ -1,0 +1,30 @@
+package gr8pefish.ironbackpacks.achievements;
+
+import net.minecraft.block.Block;
+import net.minecraft.item.Item;
+import net.minecraft.item.ItemStack;
+import net.minecraft.stats.Achievement;
+
+import java.util.ArrayList;
+import java.util.List;
+
+//Credit to Vazkii for the base code
+public class AchievementIronBackpacks extends Achievement {
+
+    public static final List<Achievement> achievements = new ArrayList<>();
+
+    public AchievementIronBackpacks(String name, int x, int y, ItemStack icon, Achievement parent) {
+        super("achievement.ironbackpacks." + name, "ironbackpacks." + name, x, y, icon, parent);
+        achievements.add(this);
+        registerStat();
+    }
+
+    public AchievementIronBackpacks(String name, int x, int y, Item icon, Achievement parent) {
+        this(name, x, y, new ItemStack(icon), parent);
+    }
+
+    public AchievementIronBackpacks(String name, int x, int y, Block icon, Achievement parent) {
+        this(name, x, y, new ItemStack(icon), parent);
+    }
+
+}
